# bot-t

./: .gitignore  ANALISIS_INCONSISTENCIAS.md  README.md  autopilot_config.json  autopilot_respuestas.db  autopilot_respuestas.db-shm  autopilot_respuestas.db-wal  autopilot_standalone.py  iniciar_autopilot.bat  iniciar_web.bat  iniciar_widget.bat  instalar.bat  main.py  pyproject.toml  requirements.in  requirements.txt  setup_windows.ps1  web_app.py  widget.py  widget_config.json
core/: actions.py  ai.py  autopilot_runner.py  browser.py  capture.py  config.py  db_manager.py  mathjax_parser.py  media_extractor.py  ocr.py  page_manager.py  parser.py  pipeline.py  runner.py  vision.py
docs/: example-image.html  example.html  example2.html  example_3.html  example_fail.html  example_structure.html  funcionamiento-y-formularios.md  inst.md  instrucciones(no relevante).md  logs.txt  sdfa.txt
tests/: benchmark_autopilot.py  test_autopilot.py  test_core.py  test_mathjax_parser.py  test_playwright.py
tmp/bot-chrome-097e4rae/: Local State
tmp/bot-chrome-097e4rae/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Web Data
tmp/bot-chrome-097e4rae/GrShaderCache/: data_0  data_1  f_000002  f_000003  f_000006  index
tmp/bot-chrome-097e4rae/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13427192568720243  (+21 more)
tmp/bot-chrome-fgzwhi2t/: Local State  VariationsSeedV2
tmp/bot-chrome-hul0oaiu/: Local State
tmp/bot-chrome-r3_lywci/: Local State
tmp/bot-chrome-vb79giyl/: Local State
web/: app.js  index.html  style.css
(+964 files in other folders)
